tests/EtaX/EtaX.methF0/EtaX.methF0.3.0-old.check
// exitCode: 0   val t1a: () => Any = methF0                // ok, eta-expansion
// exitCode: 0   val t1b: () => Any = { val t = methF0; t } // `()`-insert b/c no expected type
-- [E100] Syntax Migration Warning: target/tests/EtaX/EtaX.methF0/EtaX.methF0/EtaX.methF0.01.scala:7:33 
7 |  val t1b: () => Any = { val t = methF0; t } // `()`-insert b/c no expected type
  |                                 ^^^^^^
  |                             method methF0 must be called with () argument

Explanation
===========
Previously an empty argument list () was implicitly inserted when calling a nullary method without arguments. E.g.

def next(): T = ...
          |next     // is expanded to next()

In Dotty, this idiom is an error. The application syntax has to follow exactly the parameter syntax.
Excluded from this rule are methods that are defined in Java or that override methods defined in Java.

1 warning found
// exitCode: 0   val t1c: () => Any = methF0 _              // ok, explicit eta-expansion requested
// exitCode: 0   val t1d: Any       = methF0 _              // ok, explicit eta-expansion requested
// exitCode: 0   val t1e: Any       = methF0() _            // error: _ must follow method
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX.methF0/EtaX.methF0/EtaX.methF0.04.scala:10:32 
10 |  val t1e: Any       = methF0() _            // error: _ must follow method
   |                       ^^^^^^^^^^
   |Only function types can be followed by _ but the current expression has type () => String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 warning found
